# Android-OpenSLES

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/wk/opensl_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  log.h  native-lib.cpp  safe_queue.h
app/src/main/java/cn/wk/opensl_demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/wk/opensl_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
